--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <html>
   <head>
     <title>This page is about me!</title>
+    <meta
+http-equiv="Content-Type" content="text/html;
+charset=iso-8859-1">
     <style>
     p { color:red;}
     </style>  
   </head>
   <body>
-<h1>Mitt namn är Ewa</h1>
-  <h3>BKS Administratör</h3>
-<p>Detta handlar lite om mig själv</p>
-<img src="https://www.nordea.com/Images/Wide/37-112371/266x150.png" alt="bild på mig"/>
-<a href="https://se.linkedin.com/in/ewa-persson-23a868119">Länk till Linkedin</a>
-<a href="https://se.linkedin.com/in/ewa-persson-23a868119">Länk till Linkedin</a>
-<a href="https://se.linkedin.com/in/ewa-persson-23a868119">Länk till Linkedin</a>
+<h1>Mitt namn Ã¤r Ewa</h1>
+  <h3>BKS AdministratÃ¶r</h3>
+<p>Detta handlar lite om mig sjÃ¤lv</p>
+<img src="https://www.nordea.com/Images/Wide/37-112371/266x150.png" alt="bild pÃ¥ mig"/>
+<a href="https://se.linkedin.com/in/ewa-persson-23a868119">LÃ¤nk till Linkedin</a>
+<a href="https://se.linkedin.com/in/ewa-persson-23a868119">LÃ¤nk till Linkedin</a>
+<a href="https://se.linkedin.com/in/ewa-persson-23a868119">LÃ¤nk till Linkedin</a>
 <ul>
   <li>Natur</li>
-  <li>Sömnad</li>
-  <li>Travhästar</li>
+  <li>SÃ¶mnad</li>
+  <li>TravhÃ¤star</li>
 </ul>
 
-<img src="http://www.slu.se/globalassets/ew/org/inst/hgen/hgenlab/veron2.jpg?width=480&height=480&mode=crop" alt="bild på mig"/>
+<img src="http://www.slu.se/globalassets/ew/org/inst/hgen/hgenlab/veron2.jpg?width=480&height=480&mode=crop" alt="bild pÃ¥ mig"/>
 
   </body>
 </html>
